@@ -2,6 +2,9 @@
 [Alexandr Topilski]
 - Ui bug fixes
 - LPUSH UI handling
+- SADD UI handling
+- ZADD UI handling
+- HMSET UI handling
 
 1.2.0 / December 3, 2016
 [Alexandr Topilski]
