@@ -2,6 +2,9 @@
 [Alexandr Topilski]
 - Ui bug fixes
 - [Redis] LPUSH UI handling
+- [Redis] SADD UI handling
+- [Redis] ZADD UI handling
+- [Redis] HMSET UI handling
 
 1.2.0 / December 3, 2016
 [Alexandr Topilski]
